Move away from dummy auth and login and impl basic db based auth
