# internal/dto/create_user_request.go
@@ -1,0 +1,8 @@
+package dto
+
+type CreateUserRequest struct {
+	Username     string `json:"username" binding:"required"`
+	Password     string `json:"password" binding:"required"`
+	PasswordHash string `json:"-"`
+	Name         string `json:"name"`
+}
